name:                ImageProcessing
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ImageProcessing#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library 
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     BMPPROC
  other-modules:       Utils
  build-depends:       base >= 4.7 && < 5,
                       directory >= 1.3,
                       strict >= 0.3.2,
                       bmp >= 1.0,
                       bytestring,
                       word8,
                       containers



